# saving-llm-budget

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  install.sh  pyproject.toml
.claude/: settings.local.json
src/saving_llm_budget/: __init__.py  chat.py  cli.py  config.py  constants.py  main.py  models.py  repl.py  setup_wizard.py
src/saving_llm_budget/analysis/: __init__.py  diff.py  repo.py
src/saving_llm_budget/providers/: __init__.py  base.py  claude.py  codex.py  executor.py  openai_provider.py
src/saving_llm_budget/router/: __init__.py  engine.py  rules.py  scorer.py
src/saving_llm_budget/services/: __init__.py  benchmark.py  classifier.py  context.py  estimator.py  llm_router.py  model_selector.py  policies.py  recommender.py  tester.py
src/saving_llm_budget/utils/: __init__.py  formatters.py  io.py  paths.py
tests/: test_classifier.py  test_config.py  test_estimator.py  test_provider_executor.py  test_repl.py  test_router_engine.py  test_tester.py
